# fastapi_test

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  simple_agent.py  test_bot.py
